[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/TestRe.gd" type="Script" id=1]
[ext_resource path="res://fonts/HackTITLE.tres" type="DynamicFont" id=2]
[ext_resource path="res://TypeBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://IdentiteContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/HackFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/Sujet.jpg" type="Texture" id=6]

[sub_resource type="Theme" id=1]


[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CenterContainer" type="CenterContainer" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="Label" type="Label" parent="Panel/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 347.0
margin_right = 677.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "SUJET #Y23B"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Panel2" type="Panel" parent="Panel" index="1"]

self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = -254.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Visibility", "custom_constants" ]

[node name="TypeContainer" parent="Panel/Panel2/VBoxContainer" index="0" instance=ExtResource( 3 )]

margin_right = 770.0
theme = SubResource( 1 )
_sections_unfolded = [ "Theme", "custom_constants" ]

[node name="IdentiteContainer" parent="Panel/Panel2/VBoxContainer" index="1" instance=ExtResource( 4 )]

margin_top = 34.0
margin_right = 770.0
margin_bottom = 158.0

[node name="Panel3" type="Panel" parent="Panel" index="2"]

self_modulate = Color( 1, 0.867188, 0, 1 )
light_mask = 0
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -254.0
margin_top = 60.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="InfosSujet" type="VBoxContainer" parent="Panel/Panel3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="StatusImplantation" type="VBoxContainer" parent="Panel/Panel3/InfosSujet" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 254.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel3/InfosSujet/StatusImplantation" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 254.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 1
alignment = 1

[node name="Label" type="Label" parent="Panel/Panel3/InfosSujet/StatusImplantation/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_right = 101.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Date/Heure : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Panel/Panel3/InfosSujet/StatusImplantation/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 179.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "2018-09-03"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="Panel/Panel3/InfosSujet/StatusImplantation/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_right = 239.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "13:58:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Panel3/InfosSujet/StatusImplantation" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 254.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 1
alignment = 1

[node name="Label" type="Label" parent="Panel/Panel3/InfosSujet/StatusImplantation/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 11.0
margin_right = 118.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Implantation : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="Panel/Panel3/InfosSujet/StatusImplantation/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_right = 230.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "SUCCES"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TextureRect" type="TextureRect" parent="Panel/Panel3/InfosSujet" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 254.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[connection signal="good_type_selected" from="Panel/Panel2/VBoxContainer/TypeContainer" to="." method="_on_good_type_selected"]

[connection signal="wrong_type_selected" from="Panel/Panel2/VBoxContainer/TypeContainer" to="." method="_on_wrong_type_selected"]

[connection signal="identiteValidee" from="Panel/Panel2/VBoxContainer/IdentiteContainer" to="." method="_on_IdentiteValidee"]

[connection signal="irisSelected" from="Panel/Panel2/VBoxContainer/IdentiteContainer" to="." method="_on_irisSelected"]

[connection signal="sexeSelected" from="Panel/Panel2/VBoxContainer/IdentiteContainer" to="." method="_on_sexeSelected"]


